# iternal/server/apiUsers.go
@@ -16,7 +16,7 @@ import (
 // @Accept       json
 // @Produce      json
 // @Success      200  {object}  DatabaseServicev1.UsersResponse
-// @Failure      400  {object}	HTTPError
+// @Failure      400  {object}  HTTPError
 // @Failure      404  {object}  HTTPError
 // @Failure      500  {object}  HTTPError
 // @Router       /api/v1/users [get]
@@ -24,8 +24,7 @@ func (route Router) GetUsers(w http.ResponseWriter, r *http.Request) {
 	users, err := route.databaseService.Users(r.Context(), nil)
 	if err != nil {
 		logger.Error("Ошибка при выполнении запроса: %v", err)
-		code, errStr := utilities.GRPCErrToHttpErr(err)
-		http.Error(w, errStr, code)
+		SetGRPCError(w, err)
 		return
 	}
 
@@ -45,7 +44,7 @@ func (route Router) GetUsers(w http.ResponseWriter, r *http.Request) {
 // @Produce      json
 // @Param        id   path      int  true  "User ID"
 // @Success      200  {object}  DatabaseServicev1.CreateUserResponse
-// @Failure      400  {object}	HTTPError
+// @Failure      400  {object}  HTTPError
 // @Failure      404  {object}  HTTPError
 // @Failure      500  {object}  HTTPError
 // @Router       /api/v1/users/{id} [get]
@@ -55,8 +54,7 @@ func (route Router) GetUser(w http.ResponseWriter, r *http.Request) {
 	user, err := route.databaseService.FindUserById(r.Context(), &DatabaseServicev1.FindUserByIdRequest{Id: id})
 	if err != nil {
 		logger.Error("Ошибка при выполнении запроса: %v", err)
-		code, errStr := utilities.GRPCErrToHttpErr(err)
-		http.Error(w, errStr, code)
+		SetGRPCError(w, err)
 		return
 	}
 
@@ -76,7 +74,7 @@ func (route Router) GetUser(w http.ResponseWriter, r *http.Request) {
 // @Produce      json
 // @Param        user body DatabaseServicev1.UpdateUserRequest true "Модель для обновления"
 // @Success      200  {object}  DatabaseServicev1.CreateUserResponse
-// @Failure      400  {object}	HTTPError
+// @Failure      400  {object}  HTTPError
 // @Failure      404  {object}  HTTPError
 // @Failure      500  {object}  HTTPError
 // @Router       /api/v1/users/{id} [put]
@@ -87,6 +85,7 @@ func (route Router) UpdateUser(w http.ResponseWriter, r *http.Request) {
 
 	if err := json.NewDecoder(r.Body).Decode(updateUser); err != nil {
 		http.Error(w, "invalid request", http.StatusBadRequest)
+		SetHTTPError(w, "Неверные аргументы", http.StatusBadRequest)
 		return
 	}
 
@@ -95,8 +94,7 @@ func (route Router) UpdateUser(w http.ResponseWriter, r *http.Request) {
 	user, err := route.databaseService.UpdateUser(r.Context(), updateUser)
 	if err != nil {
 		logger.Error("Ошибка при выполнении запроса: %v", err)
-		code, errStr := utilities.GRPCErrToHttpErr(err)
-		http.Error(w, errStr, code)
+		SetGRPCError(w, err)
 		return
 	}
 
@@ -116,7 +114,7 @@ func (route Router) UpdateUser(w http.ResponseWriter, r *http.Request) {
 // @Produce      json
 // @Param        user body DatabaseServicev1.CreateUserRequest false "Сущность пользователя"
 // @Success      200  {object}  DatabaseServicev1.CreateUserResponse
-// @Failure      400  {object}	HTTPError
+// @Failure      400  {object}  HTTPError
 // @Failure      404  {object}  HTTPError
 // @Failure      500  {object}  HTTPError
 // @Router       /api/v1/users [post]
@@ -124,15 +122,14 @@ func (route Router) CreateUser(w http.ResponseWriter, r *http.Request) {
 	newUser := new(DatabaseServicev1.CreateUserRequest)
 
 	if err := json.NewDecoder(r.Body).Decode(newUser); err != nil {
-		http.Error(w, "invalid request", http.StatusBadRequest)
+		SetHTTPError(w, "Неверные аргументы", http.StatusBadRequest)
 		return
 	}
 
 	createdUser, err := route.databaseService.CreateUser(r.Context(), newUser)
 	if err != nil {
 		logger.Error("Ошибка при выполнении запроса: %v", err)
-		code, errStr := utilities.GRPCErrToHttpErr(err)
-		http.Error(w, errStr, code)
+		SetGRPCError(w, err)
 		return
 	}
 
@@ -150,8 +147,8 @@ func (route Router) CreateUser(w http.ResponseWriter, r *http.Request) {
 // @Accept       json
 // @Produce      json
 // @Param        id   path      int  true  "ID пользователя"
-// @Success      200  {string}  string    "ok"
-// @Failure      400  {object}	HTTPError
+// @Success      200  {int}  int
+// @Failure      400  {object}  HTTPError
 // @Failure      404  {object}  HTTPError
 // @Failure      500  {object}  HTTPError
 // @Router       /api/v1/users/{id} [delete]
@@ -164,8 +161,7 @@ func (route Router) DeleteUserByID(w http.ResponseWriter, r *http.Request) {
 	response, err := route.databaseService.DeleteUserById(r.Context(), request)
 	if err != nil {
 		logger.Error("Ошибка при выполнении запроса: %v", err)
-		code, errStr := utilities.GRPCErrToHttpErr(err)
-		http.Error(w, errStr, code)
+		SetGRPCError(w, err)
 		return
 	}
 
@@ -180,15 +176,15 @@ func (route Router) DeleteUserByID(w http.ResponseWriter, r *http.Request) {
 // @Produce      json
 // @Param        phone body DatabaseServicev1.UserIsExistsRequest true "Номер телефона"
 // @Success      200  {object}  DatabaseServicev1.UserIsExistsResponse
-// @Failure      400  {object}	HTTPError
+// @Failure      400  {object}  HTTPError
 // @Failure      404  {object}  HTTPError
 // @Failure      500  {object}  HTTPError
-// @Router       /api/v1/users/isexists [post]
+// @Router       /api/v1/users/isExists [post]
 func (route Router) UserIsExists(w http.ResponseWriter, r *http.Request) {
 	request := new(DatabaseServicev1.UserIsExistsRequest)
 
 	if err := json.NewDecoder(r.Body).Decode(request); err != nil {
-		http.Error(w, "invalid request", http.StatusBadRequest)
+		SetHTTPError(w, "Неверные аргументы", http.StatusBadRequest)
 		return
 	}
 
@@ -197,13 +193,12 @@ func (route Router) UserIsExists(w http.ResponseWriter, r *http.Request) {
 	response, err := route.databaseService.UserIsExists(r.Context(), request)
 	if err != nil {
 		logger.Error("Ошибка при выполнении запроса: %v", err)
-		code, errStr := utilities.GRPCErrToHttpErr(err)
-		http.Error(w, errStr, code)
+		SetGRPCError(w, err)
 		return
 	}
 
 	resp := struct {
-		IsExists bool
+		IsExists bool `json:"isExists"`
 	}{
 		IsExists: response.IsExists,
 	}
@@ -223,15 +218,15 @@ func (route Router) UserIsExists(w http.ResponseWriter, r *http.Request) {
 // @Produce      json
 // @Param        request body DatabaseServicev1.IsRoleRequest true "Request"
 // @Success      200  {object}  DatabaseServicev1.IsRoleResponse
-// @Failure      400  {object}	HTTPError
+// @Failure      400  {object}  HTTPError
 // @Failure      404  {object}  HTTPError
 // @Failure      500  {object}  HTTPError
-// @Router       /api/v1/users/isrole [post]
+// @Router       /api/v1/users/isRole [post]
 func (route Router) UserIsRole(w http.ResponseWriter, r *http.Request) {
 	request := new(DatabaseServicev1.IsRoleRequest)
 
 	if err := json.NewDecoder(r.Body).Decode(request); err != nil {
-		http.Error(w, "invalid request", http.StatusBadRequest)
+		SetHTTPError(w, "Неверные аргументы", http.StatusBadRequest)
 		return
 	}
 
@@ -240,8 +235,185 @@ func (route Router) UserIsRole(w http.ResponseWriter, r *http.Request) {
 	response, err := route.databaseService.IsRole(r.Context(), request)
 	if err != nil {
 		logger.Error("Ошибка при выполнении запроса: %v", err)
-		code, errStr := utilities.GRPCErrToHttpErr(err)
-		http.Error(w, errStr, code)
+		SetGRPCError(w, err)
+		return
+	}
+
+	resp := struct {
+		Accessory bool `json:"accessory"`
+	}{
+		Accessory: response.Accessory,
+	}
+
+	str := utilities.ToJSON(resp)
+	_, err = w.Write([]byte(str))
+	if err != nil {
+		logger.Error("%s", err.Error())
+	}
+}
+
+// FindUserByEmail godoc
+// @Summary      Поиск пользователя по email
+// @Description  Поиск пользователя по его email
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        email query string true "Email" Format(email)
+// @Success      200  {object}  DatabaseServicev1.CreateUserResponse
+// @Failure      400  {object}  HTTPError
+// @Failure      404  {object}  HTTPError
+// @Failure      500  {object}  HTTPError
+// @Router       /api/v1/users/ [get]
+func (route Router) FindUserByEmail(w http.ResponseWriter, r *http.Request) {
+	request := &DatabaseServicev1.FindUserByEmailRequest{Email: r.URL.Query().Get("email")}
+
+	if request.Email == "" || len(request.Email) == 0 {
+		logger.Error("Email не может быть пустым")
+		SetHTTPError(w, "Поле \"email\" не может быть пустым", http.StatusBadRequest)
+		return
+	}
+
+	response, err := route.databaseService.FindUserByEmail(r.Context(), request)
+	if err != nil {
+		logger.Error("Ошибка при выполнении запроса: %v", err)
+		SetGRPCError(w, err)
+		return
+	}
+
+	str := utilities.ToJSON(response)
+	_, err = w.Write([]byte(str))
+	if err != nil {
+		logger.Error("%s", err.Error())
+	}
+}
+
+// ComparePassword godoc
+// @Summary      Сравнение вводимого пароля от пользователя
+// @Description  Сравнивает пароль что ввел пользователь, с тем что есть в базе данных у его аккаунта
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        request body DatabaseServicev1.ComparePasswordRequest true "Данные пользователя"
+// @Success      200  {object}  DatabaseServicev1.ComparePasswordResponse
+// @Failure      400  {object}  HTTPError
+// @Failure      404  {object}  HTTPError
+// @Failure      500  {object}  HTTPError
+// @Router       /api/v1/users/comparePassword [post]
+func (route Router) ComparePassword(w http.ResponseWriter, r *http.Request) {
+	request := &DatabaseServicev1.ComparePasswordRequest{}
+
+	if err := json.NewDecoder(r.Body).Decode(request); err != nil {
+		SetHTTPError(w, "Неверные аргументы", http.StatusBadRequest)
+		return
+	}
+
+	response, err := route.databaseService.ComparePassword(r.Context(), request)
+	if err != nil {
+		logger.Error("Ошибка при выполнении запроса: %v", err)
+		SetGRPCError(w, err)
+		return
+	}
+
+	resp := struct {
+		Accessory bool `json:"accessory"`
+	}{
+		Accessory: response.Accessory,
+	}
+
+	str := utilities.ToJSON(resp)
+	_, err = w.Write([]byte(str))
+	if err != nil {
+		logger.Error("%s", err.Error())
+	}
+}
+
+// ChangeUserType godoc
+// @Summary      Меняет тип пользователя
+// @Description  Обновление типа пользователя (0 - юридическое лицо, 1 - физическое лицо)
+// @Tags         users
+// @Accept       mpfd
+// @Produce      json
+// @Param        id   path      uint64  true  "ID пользователя"
+// @Param        type formData  uint64  true  "Type поле пользователя, 0 - юридическое лицо, 1 - физическое лицо"
+// @Success      200  {object}  DatabaseServicev1.ChangeUserTypeResponse
+// @Failure      400  {object}  HTTPError
+// @Failure      404  {object}  HTTPError
+// @Failure      500  {object}  HTTPError
+// @Router       /api/v1/users/{id} [patch]
+func (route Router) ChangeUserType(w http.ResponseWriter, r *http.Request) {
+	id := utilities.StrToUint(mux.Vars(r)["id"])
+
+	if err := r.ParseMultipartForm(1); err != nil {
+		logger.Error("Ошибка при парсе формы: %v", err)
+		SetHTTPError(w, "Слишком длинное тело запроса", http.StatusBadRequest)
+		return
+	}
+
+	userType := utilities.StrToUint(r.FormValue("type"))
+
+	if userType < 0 {
+		SetHTTPError(w, "Поле \"type\" не может быть меньше 0", http.StatusBadRequest)
+		return
+	}
+
+	if userType > 1 {
+		SetHTTPError(w, "Поле \"type\" не может быть больше 1", http.StatusBadRequest)
+		return
+	}
+
+	request := &DatabaseServicev1.ChangeUserTypeRequest{
+		Id:   id,
+		Type: userType,
+	}
+
+	response, err := route.databaseService.ChangeUserType(r.Context(), request)
+	if err != nil {
+		logger.Error("Ошибка при выполнении запроса: %v", err)
+		SetGRPCError(w, err)
+		return
+	}
+
+	resp := struct {
+		Accessory bool `json:"accessory"`
+	}{
+		Accessory: response.Accessory,
+	}
+
+	str := utilities.ToJSON(resp)
+
+	_, err = w.Write([]byte(str))
+	if err != nil {
+		logger.Error("%s", err.Error())
+	}
+}
+
+// FindUserByPhone godoc
+// @Summary      Поиск пользователя по номеру телефона
+// @Description  Поиск пользователя по его phone
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        phone query string true "Phone"
+// @Success      200  {object}  DatabaseServicev1.CreateUserResponse
+// @Failure      400  {object}  HTTPError
+// @Failure      404  {object}  HTTPError
+// @Failure      500  {object}  HTTPError
+// @Router       /api/v1/users/ [get]
+func (route Router) FindUserByPhone(w http.ResponseWriter, r *http.Request) {
+	request := &DatabaseServicev1.FindUserByPhoneRequest{Phone: r.URL.Query().Get("phone")}
+
+	if request.Phone == "" || len(request.Phone) == 0 {
+		logger.Error("Phone не может быть пустым")
+		SetHTTPError(w, "Поле \"phone\" не может быть пустым", http.StatusBadRequest)
+		return
+	}
+
+	logger.Info("request: %+v", request)
+
+	response, err := route.databaseService.FindUserByPhone(r.Context(), request)
+	if err != nil {
+		logger.Error("Ошибка при выполнении запроса: %v", err)
+		SetGRPCError(w, err)
 		return
 	}
 
